--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header class="header">
             <nav class="navbar">
                 <a class="nav-logo" href="index.html"><img src="./img/logo.png" alt=""></a>
+                <h1>Phan Van Phat</h1>
             </nav>
         </header>
     </div>
